--- a/css/threecolumnslider.css
+++ b/css/threecolumnslider.css
@@ -25,7 +25,7 @@
 
 .carousel-item {
     flex: 0 0 31.33%;
-    margin: 0 2%;
+    margin: 0 1%;
     box-sizing: border-box;
     /* padding: 10px; */
     border: 1px solid #ddd;
@@ -95,7 +95,7 @@
 
 .carouselcards {
     margin-top: 4%;
-    padding: 0 43px;
+    /* padding: 0 43px; */
 }
 
 .carouseltextbtn {
